--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ p {
 	font-size: 17px;
 }
 
+
 article {
 	padding-top: 40px;
 	padding-bottom: 40px;
@@ -27,9 +28,13 @@ em {
 	font-style: italic;
 }
 .bigtext {
-	padding-top: 20px;
-	font-size: 24px;
+	margin-top: 20px;
+	font-size: 22px;
 	line-height: 170%;
+	border: 1.5px solid;
+	box-shadow: 6px 4px #000000;
+	border-radius: 2px 10px;
+	padding: 12px;
 }
 .stickyheader {
 	background-color: white;
