--- a/style.css
+++ b/style.css
@@ -45,9 +45,10 @@ em {
 	font-size: 22px;
 	line-height: 170%;
 	border: 1.5px solid;
-	box-shadow: 6px 4px #000000;
-	border-radius: 2px 10px;
-	padding: 12px;
+	/* box-shadow: 6px 4px #000000; */
+	border-radius: 60px 60px 0px 0px;
+	padding: 16px;
+	padding-top: 30px;
 }
 .stickyheader {
 	background-color: white;
@@ -74,33 +75,6 @@ footer {
 }
 
  /* header animation */
-/* #circletext {  */
-	/* position: relative;  */
-	/* width: 100%;  */
-	/* padding-bottom:50%;  */
-	/* overflow: hidden;  */
-}
-/* #circletext text {  */
-	/* font-family: 'Montserrat';  */
-	/* font-size: 38px;  */
-	/* font-weight: bold;  */
-}
-/* #circletext svg {  */
-	/* position: absolute;  */
-	/* left: 0;  */
-	/* top: 0;  */
-	/* width: 100%;  */
-	/* height: 400px; */
-    /* animation-name: rotate; */
-    /* animation-duration: 16s; */
-    /* animation-iteration-count: infinite; */
-    /* animation-timing-function: linear; */
-}
-/* @keyframes rotate { */
-    /* from { transform: rotate(0deg); } */
-    /* to { transform: rotate(360deg); } */
-}
-
 #circletext {
     position: relative;
     width: 100%;
@@ -119,14 +93,27 @@ footer {
     font-size: 30px; 
 	overflow: hidden;
 }
+
 #circletext svg:nth-child(1) {
-    position: absolute;
+    position: relative;
     left: 0;
     top: 0;
     width: 100%;
     height: auto;
     animation-name: rotateOuter;
-    animation-duration: 22s;
+    animation-duration: 28s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+	overflow: hidden;
+}
+#circletext svg:nth-child(2) {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    animation-name: rotateInner;
+    animation-duration: 22s; /* Faster rotation for inner circle */
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 	overflow: hidden;
@@ -135,18 +122,6 @@ footer {
 /* Inner Circle */
 #circletext svg:nth-child(2) text {
     font-size: 18.5px; /* Inner circle font size */
-	overflow: hidden;
-}
-#circletext svg:nth-child(2) {
-    position: relative;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: auto;
-    animation-name: rotateInner;
-    animation-duration: 18s; /* Faster rotation for inner circle */
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
 	overflow: hidden;
 }
 
@@ -168,4 +143,16 @@ footer {
     to {
         transform: rotate(0deg);
     }
+}
+#headcontainer {
+	max-height: 200px;
+}
+header {
+	max-height: 200px;
+	overflow: hidden;
+}
+article {
+	z-index: 2;
+	background-color: white;
+	position: relative;
 }
