--- a/style.css
+++ b/style.css
@@ -37,6 +37,13 @@ section {
 	padding-top: 10px;
 	padding-bottom: 20px;
 	margin: 16px;
+	padding: 10px;
+}
+.sectionmain {
+	border: 2px solid;
+	border-radius: 20px;
+	background-color: #e0d7fb;
+	margin: 12px;
 }
 em {
 	font-style: italic;
@@ -45,15 +52,16 @@ em {
 	margin-top: 20px;
 	font-size: 22px;
 	line-height: 170%;
-	border: 1.5px solid;
-	/* box-shadow: 6px 4px #000000; */
-	border-radius: 60px 60px 0px 0px;
-	padding: 16px;
-	padding-top: 30px;
+	border: 2px solid;
+	background-color: #bf85fd;
+	border-radius: 50px 50px 0px 0px;
+	padding: 20px;
+	padding-top: 20px;
 }
 .stickyheader {
 	background:#ececec;
-	border: 1.5px solid; 
+	border-top: 2px solid; 
+	border-bottom: 2px solid; 
 	color:#111111;
 	padding-left: 15px;
 	padding: 10px;
@@ -107,7 +115,7 @@ footer {
     width: 100%;
     height: auto;
     animation-name: rotateOuter;
-    animation-duration: 28s;
+    animation-duration: 32s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 	overflow: hidden;
@@ -119,7 +127,7 @@ footer {
     width: 100%;
     height: auto;
     animation-name: rotateInner;
-    animation-duration: 22s; 
+    animation-duration: 32s; 
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 	overflow: hidden;
@@ -151,36 +159,45 @@ footer {
         transform: rotate(0deg);
     }
 }
+
+
 #headcontainer {
-	max-height: 180px;
+	max-height: 200px;
 }
 
 header {
-	max-height: 200px;
 	overflow: hidden;
 	background: radial-gradient(#bf85fd, #90b7f9);
 	border-radius: 200px 200px 0px 0px;
-	border: 1.5px solid;
+	border: 2px solid;
 }
 
+mark {
+	background-color: #1f1e21;
+	color: #d4d4d4;
+	padding: 3px;
+	/* border: 1px solid; */
+}
 .headerdiv {
 	background-color: #ececec;
 }
 article {
 	z-index: 2;
-	background-color: #d4d4d4;
+	background-color: #f6aaf1;
 	color: rgb(9, 9, 9);
 	position: relative;
 	font-family: "Montserrat", serif;
+	border-left: 2px solid;
+	border-right: 2px solid;
 }
 h2 {
 	font-family: "Playfair Display", serif;
-	font-size: 18px;
+	font-size: 20px;
 }
 .author {
 	background-color: #ececec;
-	border-left: 1.5px solid;
-	border-right: 1.5px solid;
+	border-left: 2px solid;
+	border-right: 2px solid;
 	color:#111111;
 	padding: 12px;
 	font-size: 20px;
