--- a/style.css
+++ b/style.css
@@ -220,7 +220,10 @@ h2 {
 	position: fixed;
 	top: 0; 
 	left: 0; 
+	-webkit-transform-origin: 50% 0; 
 	transform-origin: 50% 0; 
+	-webkit-animation: scaleProgress auto linear;
+	-webkit-animation-timeline: scroll(root);
 	animation: scaleProgress auto linear;
 	animation-timeline: scroll(root);
   }
