--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
  /* variables */
  :root {
 	--root-size: 16px;
-	--root-size-h1: 16px;
+	--root-size-h1: 14.25px;
+	--root-size-small: 8.75px;
 	--root-size-h2: 16px;
 	--root-size-h3: 16px;
 	--root-size-p: 16px;
@@ -119,7 +120,7 @@ footer {
 
 /* Outer Circle */
 #circletext svg:nth-child(1) text {
-    font-size: 28.5px; 
+    font-size: calc(var(--root-size-h1) * 2); 
 	overflow: hidden;
 }
 
@@ -150,7 +151,7 @@ footer {
 
 /* Inner Circle */
 #circletext svg:nth-child(2) text {
-    font-size: 17.5px;
+    font-size: calc(var(--root-size-small) * 2);
 	overflow: hidden;
 }
 
@@ -249,3 +250,56 @@ h2 {
 	  transform: scaleY(1); 
 	}
   }
+
+  @media (min-width:1100px) {
+	:root {
+		--root-size: 16px;
+		--root-size-h1: 14.5px;
+		--root-size-small: 8.75px;
+		--root-size-h2: 16px;
+		--root-size-h3: 16px;
+		--root-size-p: 16px;
+		--article-margin: 15px;
+		--line-height: 140%; 
+	}
+	 /* header animation */
+#circletext {
+    position: relative;
+    width: 100%;
+}
+
+#circletext svg:nth-child(1) {
+    position: relative;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    animation-name: rotateOuter;
+    animation-duration: 32s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+	
+}
+#circletext svg:nth-child(2) {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    animation-name: rotateInner;
+    animation-duration: 32s; 
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+	
+}
+#headcontainer {
+	max-height: 480px;
+	
+}
+header {
+	border-radius: 8000px 8000px 0px 0px;
+	text-align: center;
+	margin-left: 250px;
+	margin-right: 250px;
+}
+	}
